Updated discord link to a link that actually works

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ weight = 1
 
 [[menu.main]]
 name = "Discord"
-url = "https://discord.gg/PhQkxXkR5d"
+url = "https://discord.gg/6YcSEbYCJT"
 weight = 2
 
 [[menu.main]]
