--- a/config.toml
+++ b/config.toml
@@ -23,3 +23,7 @@ weight = 2
 name = "GitHub"
 url = "https://github.com/YuGiOhAccess"
 weight = 3
+
+[params]
+  recent_posts_number = 0
+  mainSections = ["posts", "posts"]
